--- a/config
+++ b/config
@@ -5,7 +5,7 @@ deploy_email=basorastudio@gmail.com
 repositorio=https://github.com/basorastudio/multiagente.git
 nome_instancia=izing1
 porta_postgre_intancia=5432
-frontend_url=front.seusite.com.br
+frontend_url=app.ltd.do
 frontend_porta=4000
-backend_url=back.seusite.com.br
+backend_url=api.ltd.do
 backend_porta=3000
