--- a/config
+++ b/config
@@ -1,11 +1,11 @@
-deploy_password=Azo9p394075*
-pg_pass=Azo9p394075*
-redis_pass=Azo9p394075*
-deploy_email=basorastudio@gmail.com
-repositorio=https://github.com/basorastudio/multiagente.git
+deploy_password=AKwWM4Qu2GRppJ7
+pg_pass=AKwWM4Qu2GRppJ7
+redis_pass=AKwWM4Qu2GRppJ7
+deploy_email=seuemail@gmail.com
+repositorio=https://github.com/cleitonme/izing.open.io.git
 nome_instancia=izing1
 porta_postgre_intancia=5432
-frontend_url=app.ltd.do
+frontend_url=front.seusite.com.br
 frontend_porta=4000
-backend_url=api.ltd.do
+backend_url=back.seusite.com.br
 backend_porta=3000
