--- a/config
+++ b/config
@@ -3,7 +3,7 @@ pg_pass=Azo9p394075*
 redis_pass=Azo9p394075*
 deploy_email=basorastudio@gmail.com
 repositorio=https://github.com/basorastudio/multiagente.git
-nome_instancia=izing1
+nome_instancia=izing
 porta_postgre_intancia=5432
 frontend_url=app.ltd.do
 frontend_porta=4000
